IE position testing with YUI3 and boundingBox fixed positioning (align=false).

--- a/app/assets/stylesheets/application-ie.css
+++ b/app/assets/stylesheets/application-ie.css
@@ -6,3 +6,7 @@
 	position: relative; 
 	z-index: 0;
 }
+
+img {
+	border: none;
+}
